...
      return;
    }
    setPage(page + 1);
    fetchUserProfiles();
  };
  return (
    <View style={styles.container} testID='userProfileScreen'>
      <FlatList
        contentContainerStyle={styles.listContent}
        data={userProfileList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
